@@ -1,3 +1,8 @@
+2007-12-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-05-00
+	* add process id and timestamp for raw cells
+
 2007-09-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-04-01
